2008-11-04  Vincent Torri  <doursse at users dot sf dot net>

	* src/lib/Evil.h:
	* src/lib/evil_stdio.h:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.h:
	overload the stat() function for native Windows CE platform.
	move pipe() and fopen() definitions to their own header files

2008-11-01  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	add a flag to know if cegcc is used or not

	* src/lib/Makefile.am:
	* src/lib/dirent.h:
	* src/lib/evil_dirent.c:
	add opendir(), closedir() and readdir() implementations
	for Windows XP and CE. Now, the evas engines are correctly
	found.

	* src/lib/fnmatch.h:
	formatting

2008-11-01  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	formatting

	* src/lib/dlfcn/dlfcn.c:
	* src/lib/dlfcn/dlfcn.h:
	fix dladdr declaration

2008-10-29  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	use AC_CHECK_HEADERS instead of AC_CHECK_HEADERS_ONCE, because it
	leads to more trouble than it improves configure speed...

	* src/lib/Evil.h:
	use __VA_ARGS__ instead of ##args to make gcc happy.

2008-10-29  Vincent Torri  <doursse at users dot sf dot net>

	* configure.ac:
	define _WIN32_WCE with the cegcc compiler too
	useless EVIL_HAVE_WINCE define

	* src/bin/evil_test_memcpy.c:
	use _WIN32_WCE insead of EVIL_HAVE_WINCE

	* src/lib/Evil.h:
	try another definition of open(). Need feedback.

	* src/lib/evil_private.h:
	* src/lib/evil_util.c:
	add private error message when GetLastMessage must be called

	* src/lib/Makefile.am:
	* src/lib/evil_link_ce.c:
	* src/lib/evil_link_xp.cpp:
	* src/lib/evil_unistd.c:
	* src/lib/evil_unistd.cpp:
	move specific link code (readlink and symlink) outside
	evil_unistd to evil_link_ce.c for Windows CE and
	evil_link_xp.cpp for Windows XP. This allow the Windows CE
	code not depend on c++ code anymore and above all, not
	statically link libstdc++ on that platform.
	I need feedback on Windows XP, btw :)
